Add boost request type to API so we can calculate discount
