# api/models/boost_request.go
@@ -7,8 +7,10 @@ type BoostRequest struct {
 	AdvertiserID           string   `json:"advertiserId,omitempty"`
 	BackendChannelID       string   `json:"backendChannelId"`
 	BackendMessageID       string   `json:"backendMessageID"`
+	Type                   string   `json:"type,omitempty"`
 	Message                string   `json:"message"`
 	Price                  int64    `json:"price,string,omitempty"`
+	Discount               int64    `json:"discount,string,omitempty"`
 	AdvertiserCut          int64    `json:"advertiserCut,string,omitempty"`
 	PreferredAdvertiserIDs []string `json:"preferredAdvertiserIds,omitempty"`
 	CreatedAt              string   `json:"createdAt"`
@@ -18,6 +20,7 @@ type BoostRequest struct {
 type BoostRequestPartial struct {
 	RequesterID            string   `json:"requesterId" validate:"required"`
 	BackendChannelID       string   `json:"backendChannelId" validate:"required"`
+	Type                   string   `json:"type,omitempty"`
 	Message                string   `json:"message" validate:"required"`
 	Price                  int64    `json:"price,string,omitempty"`
 	AdvertiserCut          int64    `json:"advertiserCut,string,omitempty"`
