# api/routes/boost_request_get.go
@@ -60,8 +60,10 @@ func (h *BoostRequestGet) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
 		AdvertiserID:           br.AdvertiserID,
 		BackendChannelID:       br.Channel.BackendChannelID,
 		BackendMessageID:       br.BackendMessageID,
+		Type:                   br.Type,
 		Message:                br.Message,
 		Price:                  br.Price,
+		Discount:               br.Discount,
 		AdvertiserCut:          br.AdvertiserCut,
 		PreferredAdvertiserIDs: br.PreferredAdvertiserIDs,
 		CreatedAt:              br.CreatedAt.Format(time.RFC3339),
